DE808 + DE813: Fixed offscreen info window issue and issue with navigating to wrong location

--- a/pics-web/src/main/webapp/angular/src/common/directives/marker-cluster-map/_marker-cluster-map.scss
+++ b/pics-web/src/main/webapp/angular/src/common/directives/marker-cluster-map/_marker-cluster-map.scss
@@ -6,7 +6,7 @@
     100% { @include rotate(360deg) }
 }
 
-#loading_page {
+.loading_page {
     width: 100%;
     height: 500px;
     position: relative;
@@ -31,4 +31,45 @@
         margin-top: 30px;
         text-align: center;
     }
+}
+
+.marker-cluster-map {
+    position: relative;
+}
+
+.info-window {
+    background: #ffffff;
+    width: 250px;
+    position: absolute;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    border-radius: 4px;
+    padding: 10px 15px;
+    display: none;
+    @include box-shadow(0px 0px 5px $default_pewter);
+}
+
+.arrow-icon:before {
+    border: solid;
+    border-color: #ffffff transparent;
+    border-width: 10px 10px 0 10px;
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: 99;
+    bottom: -10px;
+    left: 45.5%;
+}
+
+.arrow-icon:after {
+    border: solid;
+    border-color: rgba(0,0,0,0.12) transparent;
+    border-width: 12px 12px 0 12px;
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: 98;
+    bottom: -12px;
+    left: 45%;
 }
